[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelguard"
version = "0.3.0"
description = "Rule-based GPU kernel hack detector."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Sinatras" },
]
keywords = [
  "gpu",
  "kernel",
  "security",
  "benchmark",
  "detection",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
api = ["starlette>=0.37", "uvicorn[standard]>=0.29"]
mcp = ["mcp[cli]>=1.2.0"]
parquet = ["pyarrow>=15"]

[project.scripts]
kernelguard = "kernelguard:main"
kguard = "kernelguard:main"
kernelguard-mcp = "kernelguard_mcp:main"
kguard-mcp = "kernelguard_mcp:main"
kernelguard-api = "kernelguard_api:main"
kguard-api = "kernelguard_api:main"

[tool.setuptools]
py-modules = ["kernelguard", "kernelguard_mcp", "kernelguard_api"]
